# CW_Test_Resit

./: CMakeLists.txt  Calculations.cpp  Calculations.h  Main.cpp  Tests.h
